--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,5 +1,5 @@
 {
-    "Title":  "WebJEA Demo",
+    "Title":  "Automation Dashboard",
     "defaultcommandid":  "overview",
     "basepath":  "c:\\scripts",
     "LogParameters":  true,
@@ -10,7 +10,7 @@
                      {
                          "id":  "overview",
                          "displayname":  "Overview",
-                         "synopsis":  "Congratulations, WebJEA is now working!  We\u0027ve pre-loaded a demo script that will help you verify everything is working.  \u003cbr/\u003e\u003ci\u003eTip: You can use the synopsis property of default command to display any text you want.  Including html.\u003c/i\u003e",
+                         "synopsis":  "Welcome to the Remote Server Administration Dashboard  Here You can manage all your Admin related tasks automatically !!.  \u003cbr/\u003e\u003ci\u003eTip: You can use the synopsis property of default command to display any text you want.  Including html.\u003c/i\u003e",
                          "permittedgroups":  [
                                                  ".\\Administrators"
                                              ],
